[package]
name = "paste"
version = "0.1.11"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for all your token pasting needs"
repository = "https://github.com/dtolnay/paste"
readme = "README.md"

[dependencies]
paste-impl = { version = "=0.1.11", path = "impl" }
proc-macro-hack = "0.5.9"

[dev-dependencies]
rustversion = "1.0"
trybuild = "1.0"

[workspace]
members = ["impl"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
